test/corpus/statements.txt
================================================================================
Import statements
================================================================================

import a, b
import b.c as d
import a.b.c

--------------------------------------------------------------------------------

(module
  (import_statement
    (dotted_name
      (identifier))
    (dotted_name
      (identifier)))
  (import_statement
    (aliased_import
      (dotted_name
        (identifier)
        (identifier))
      (identifier)))
  (import_statement
    (dotted_name
      (identifier)
      (identifier)
      (identifier))))

================================================================================
Import-from statements
================================================================================

from a import b
from a import *
from a import (b, c)
from a.b import c
from . import b
from .. import b
from .a import b
from ..a import b

--------------------------------------------------------------------------------

(module
  (import_from_statement
    (dotted_name
      (identifier))
    (dotted_name
      (identifier)))
  (import_from_statement
    (dotted_name
      (identifier))
    (wildcard_import))
  (import_from_statement
    (dotted_name
      (identifier))
    (dotted_name
      (identifier))
    (dotted_name
      (identifier)))
  (import_from_statement
    (dotted_name
      (identifier)
      (identifier))
    (dotted_name
      (identifier)))
  (import_from_statement
    (relative_import
      (import_prefix))
    (dotted_name
      (identifier)))
  (import_from_statement
    (relative_import
      (import_prefix))
    (dotted_name
      (identifier)))
  (import_from_statement
    (relative_import
      (import_prefix)
      (dotted_name
        (identifier)))
    (dotted_name
      (identifier)))
  (import_from_statement
    (relative_import
      (import_prefix)
      (dotted_name
        (identifier)))
    (dotted_name
      (identifier))))

================================================================================
Assert statements
================================================================================

assert a
assert b, c

--------------------------------------------------------------------------------

(module
  (assert_statement
    (identifier))
  (assert_statement
    (identifier)
    (identifier)))

================================================================================
Expression statements
================================================================================

a
b + c
1, 2, 3
1, 2, 3,

--------------------------------------------------------------------------------

(module
  (identifier)
  (binary_operator
    (identifier)
    (identifier))
  (tuple_expression
    (integer)
    (integer)
    (integer))
  (tuple_expression
    (integer)
    (integer)
    (integer)))

================================================================================
Control-flow statements
================================================================================

while true:
  pass
  break
  continue

--------------------------------------------------------------------------------

(module
  (while_statement
    condition: (identifier)
    body: (block
      (pass_statement)
      (break_statement)
      (continue_statement))))

================================================================================
Return statements
================================================================================

return
return a + b, c
return not b

--------------------------------------------------------------------------------

(module
  (return_statement)
  (return_statement
    (expression_list
      (binary_operator
        (identifier)
        (identifier))
      (identifier)))
  (return_statement
    (not_operator
      (identifier))))

================================================================================
If statements
================================================================================

if a:
  b
  c

--------------------------------------------------------------------------------

(module
  (if_statement
    condition: (identifier)
    consequence: (block
      (identifier)
      (identifier))))

================================================================================
If else statements
================================================================================

if a:
  b
elif c:
  d
else:
  f

if a:
  b
else:
  f

if a: b

if a: b; c

--------------------------------------------------------------------------------

(module
  (if_statement
    condition: (identifier)
    consequence: (block
      (identifier))
    alternative: (elif_clause
      condition: (identifier)
      consequence: (block
        (identifier)))
    alternative: (else_clause
      body: (block
        (identifier))))
  (if_statement
    condition: (identifier)
    consequence: (block
      (identifier))
    alternative: (else_clause
      body: (block
        (identifier))))
  (if_statement
    condition: (identifier)
    consequence: (block
      (identifier)))
  (if_statement
    condition: (identifier)
    consequence: (block
      (identifier)
      (identifier))))

================================================================================
Nested if statements
================================================================================

if a:
  if b:
    c
  else:
    if e:
      f
g

--------------------------------------------------------------------------------

(module
  (if_statement
    condition: (identifier)
    consequence: (block
      (if_statement
        condition: (identifier)
        consequence: (block
          (identifier))
        alternative: (else_clause
          body: (block
            (if_statement
              condition: (identifier)
              consequence: (block
                (identifier))))))))
  (identifier))

================================================================================
While statements
================================================================================

while a:
  b

while c:
  d
else:
  e
  f

--------------------------------------------------------------------------------

(module
  (while_statement
    condition: (identifier)
    body: (block
      (identifier)))
  (while_statement
    condition: (identifier)
    body: (block
      (identifier))
    alternative: (else_clause
      body: (block
        (identifier)
        (identifier)))))

================================================================================
For statements
================================================================================

for line, i in lines:
  print(line)
  for character, j in line:
    print(character)
else:
  print(x)

for x, in [(1,), (2,), (3,)]:
  x

--------------------------------------------------------------------------------

(module
  (for_statement
    left: (pattern_list
      (identifier)
      (identifier))
    right: (identifier)
    body: (block
      (call
        function: (identifier)
        arguments: (argument_list
          (identifier)))
      (for_statement
        left: (pattern_list
          (identifier)
          (identifier))
        right: (identifier)
        body: (block
          (call
            function: (identifier)
            arguments: (argument_list
              (identifier))))))
    alternative: (else_clause
      body: (block
        (call
          function: (identifier)
          arguments: (argument_list
            (identifier))))))
  (for_statement
    left: (pattern_list
      (identifier))
    right: (list
      (tuple
        (integer))
      (tuple
        (integer))
      (tuple
        (integer)))
    body: (block
      (identifier))))

================================================================================
Try statements
================================================================================

try:
  a
except b:
  c
except d as e:
  f
except g, h:
  i
except:
  j

try:
  a
except b:
  c
  d
else:
  e
finally:
  f

try:
  a
except* b:
  c
except* d as e:
  f
else:
  g
finally:
  h

--------------------------------------------------------------------------------

(module
  (try_statement
    body: (block
      (identifier))
    (except_clause
      (identifier)
      (block
        (identifier)))
    (except_clause
      (as_pattern
        (identifier)
        comptime: (as_pattern_target
          (identifier)))
      (block
        (identifier)))
    (except_clause
      (identifier)
      (identifier)
      (block
        (identifier)))
    (except_clause
      (block
        (identifier))))
  (try_statement
    body: (block
      (identifier))
    (except_clause
      (identifier)
      (block
        (identifier)
        (identifier)))
    (else_clause
      body: (block
        (identifier)))
    (finally_clause
      (block
        (identifier))))
  (try_statement
    body: (block
      (identifier))
    (except_clause
      (list_splat
        (identifier))
      (block
        (identifier)))
    (except_clause
      (list_splat
        (as_pattern
          (identifier)
          comptime: (as_pattern_target
            (identifier))))
      (block
        (identifier)))
    (else_clause
      body: (block
        (identifier)))
    (finally_clause
      (block
        (identifier)))))

================================================================================
With statements
================================================================================

with a as b:
  c

with (open('d') as d,
      open('e') as e):
  f

with e as f, g as h,:
  i

--------------------------------------------------------------------------------

(module
  (with_statement
    (with_clause
      (with_item
        (as_pattern
          (identifier)
          (as_pattern_target
            (identifier)))))
    (block
      (identifier)))
  (with_statement
    (with_clause
      (with_item
        (as_pattern
          (call
            (identifier)
            (argument_list
              (string
                (string_start)
                (string_content)
                (string_end))))
          (as_pattern_target
            (identifier))))
      (with_item
        (as_pattern
          (call
            (identifier)
            (argument_list
              (string
                (string_start)
                (string_content)
                (string_end))))
          (as_pattern_target
            (identifier)))))
    (block
      (identifier)))
  (with_statement
    (with_clause
      (with_item
        (as_pattern
          (identifier)
          (as_pattern_target
            (identifier))))
      (with_item
        (identifier)
        (pattern_list
          (identifier))))
    (block
      (identifier))))

================================================================================
Async Function definitions
================================================================================

async def a():
  b

async def c(d):
  e

async def g(g, h,):
  i

async def c(a: str):
  a

async def c(a: b.c):
  a

async def d(a: Sequence[T]) -> T:
  a

async def i(a, b=c, *c, **d):
  a

async def d(a: str) -> None:
  return None

async def d(a:str="default", b=c) -> None:
  return None

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (block
      (identifier)))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (identifier))
    body: (block
      (identifier)))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (identifier)
      (identifier))
    body: (block
      (identifier)))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter
        (identifier)
        type: (type
          (identifier))))
    body: (block
      (identifier)))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter
        (identifier)
        type: (type
          (attribute
            object: (identifier)
            attribute: (identifier)))))
    body: (block
      (identifier)))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter
        (identifier)
        type: (type
          (subscript
            value: (identifier)
            subscript: (identifier)))))
    return_type: (type
      (identifier))
    body: (block
      (identifier)))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (identifier)
      (default_parameter
        name: (identifier)
        value: (identifier))
      (list_splat_pattern
        (identifier))
      (dictionary_splat_pattern
        (identifier)))
    body: (block
      (identifier)))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter
        (identifier)
        type: (type
          (identifier))))
    return_type: (type
      (none))
    body: (block
      (return_statement
        (none))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_default_parameter
        name: (identifier)
        type: (type
          (identifier))
        value: (string
          (string_start)
          (string_content)
          (string_end)))
      (default_parameter
        name: (identifier)
        value: (identifier)))
    return_type: (type
      (none))
    body: (block
      (return_statement
        (none)))))

================================================================================
Function definitions
================================================================================

def e((a,b)):
  return (a,b)

def e(*list: str):
  pass

def e(var **list: str):
  pass

def g(h, i, /, j, *, k=100, var **kwarg):
  return h,i,j,k,kwarg

def h(*a):
  i((*a))
  j(((*a)))

def foo():
    pass \
\
\

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters
      (tuple_pattern
        (identifier)
        (identifier)))
    body: (block
      (return_statement
        (tuple
          (identifier)
          (identifier)))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter
        (list_splat_pattern
          (identifier))
        type: (type
          (identifier))))
    body: (block
      (pass_statement)))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter
        (argument_convention)
        (dictionary_splat_pattern
          (identifier))
        type: (type
          (identifier))))
    body: (block
      (pass_statement)))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (identifier)
      (identifier)
      (positional_separator)
      (identifier)
      (keyword_separator)
      (default_parameter
        name: (identifier)
        value: (integer))
      (convention_parameter
        (argument_convention)
        (dictionary_splat_pattern
          (identifier))))
    body: (block
      (return_statement
        (expression_list
          (identifier)
          (identifier)
          (identifier)
          (identifier)
          (identifier)))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (list_splat_pattern
        (identifier)))
    body: (block
      (call
        function: (identifier)
        arguments: (argument_list
          (parenthesized_expression
            (list_splat
              (identifier)))))
      (call
        function: (identifier)
        arguments: (argument_list
          (parenthesized_expression
            (parenthesized_expression
              (list_splat
                (identifier))))))))
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (block
      (pass_statement)))
  (line_continuation)
  (line_continuation)
  (line_continuation))

================================================================================
Mojo Function Definitions
================================================================================

def e[IntableType: Intable](a: IntableType) -> Int:
  return int(a)

def e(*list: String):
  pass

def e(**list: String):
  pass

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    type_parameters: (type_parameter
      (constrained_parameter
        name: (identifier)
        type: (type
          (identifier))))
    parameters: (parameters
      (typed_parameter
        (identifier)
        type: (type
          (identifier))))
    return_type: (type
      (identifier))
    body: (block
      (return_statement
        (call
          function: (identifier)
          arguments: (argument_list
            (identifier))))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter
        (list_splat_pattern
          (identifier))
        type: (type
          (identifier))))
    body: (block
      (pass_statement)))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter
        (dictionary_splat_pattern
          (identifier))
        type: (type
          (identifier))))
    body: (block
      (pass_statement))))

================================================================================
Empty blocks
================================================================================

# These are not actually valid python; blocks
# must contain at least one statement. But we
# allow them because error recovery for empty
# blocks doesn't work very well otherwise.
def a(b, c):

if d:
  e(d)
  while f():

--------------------------------------------------------------------------------

(module
  (comment)
  (comment)
  (comment)
  (comment)
  (function_definition
    name: (identifier)
    parameters: (parameters
      (identifier)
      (identifier))
    body: (block))
  (if_statement
    condition: (identifier)
    consequence: (block
      (call
        function: (identifier)
        arguments: (argument_list
          (identifier)))
      (while_statement
        condition: (call
          function: (identifier)
          arguments: (argument_list))
        body: (block)))))

================================================================================
Class definitions
================================================================================

class A:
  def b(self):
    return c
class B():
  pass
class B(method1):
  def method1(self):
    return
class C(method1, Sequence[T]):
  pass
class D(Sequence[T, U]):
  pass

--------------------------------------------------------------------------------

(module
  (class_definition
    (identifier)
    (block
      (function_definition
        (identifier)
        (parameters
          (self_parameter))
        (block
          (return_statement
            (identifier))))))
  (class_definition
    (identifier)
    (argument_list)
    (block
      (pass_statement)))
  (class_definition
    (identifier)
    (argument_list
      (identifier))
    (block
      (function_definition
        (identifier)
        (parameters
          (self_parameter))
        (block
          (return_statement)))))
  (class_definition
    (identifier)
    (argument_list
      (identifier)
      (subscript
        (identifier)
        (identifier)))
    (block
      (pass_statement)))
  (class_definition
    (identifier)
    (argument_list
      (subscript
        (identifier)
        (identifier)
        (identifier)))
    (block
      (pass_statement))))

================================================================================
Class definitions with superclasses
================================================================================

class A(B, C):
  def d():
    e

--------------------------------------------------------------------------------

(module
  (class_definition
    (identifier)
    (argument_list
      (identifier)
      (identifier))
    (block
      (function_definition
        (identifier)
        (parameters)
        (block
          (identifier))))))

================================================================================
Decorated definitions
================================================================================

@a.b
class C:
  @d(1)
  @e[2].f.g
  def f():
    g

  @f()
  async def f():
    g

@buttons[0].clicked.connect
def spam():
    ...

--------------------------------------------------------------------------------

(module
  (decorated_definition
    (decorator
      (attribute
        (identifier)
        (identifier)))
    (class_definition
      (identifier)
      (block
        (decorated_definition
          (decorator
            (call
              (identifier)
              (argument_list
                (integer))))
          (decorator
            (attribute
              (attribute
                (subscript
                  (identifier)
                  (integer))
                (identifier))
              (identifier)))
          (function_definition
            (identifier)
            (parameters)
            (block
              (identifier))))
        (decorated_definition
          (decorator
            (call
              (identifier)
              (argument_list)))
          (function_definition
            (identifier)
            (parameters)
            (block
              (identifier)))))))
  (decorated_definition
    (decorator
      (attribute
        (attribute
          (subscript
            (identifier)
            (integer))
          (identifier))
        (identifier)))
    (function_definition
      (identifier)
      (parameters)
      (block
        (ellipsis)))))

================================================================================
Trait definitions
================================================================================

trait A:
  pass

trait B:
  def func(self):
    ...

trait C:
  def func1(mut self):
    pass

  def func2(self, mut arg: Arg):
    pass

trait D:
  def func1(mut self, var existing: Self, /):
    pass

  def func2(var self):
    pass

--------------------------------------------------------------------------------

(module
  (trait_definition
    (identifier)
    (block
      (pass_statement)))
  (trait_definition
    (identifier)
    (block
      (function_definition
        (identifier)
        (parameters
          (self_parameter))
        (block
          (ellipsis)))))
  (trait_definition
    (identifier)
    (block
      (function_definition
        (identifier)
        (parameters
          (self_parameter
            (argument_convention)))
        (block
          (pass_statement)))
      (function_definition
        (identifier)
        (parameters
          (self_parameter)
          (typed_parameter
            (argument_convention)
            (identifier)
            (type
              (identifier))))
        (block
          (pass_statement)))))
  (trait_definition
    (identifier)
    (block
      (function_definition
        (identifier)
        (parameters
          (self_parameter
            (argument_convention))
          (typed_parameter
            (argument_convention)
            (identifier)
            (type
              (self_type)))
          (positional_separator))
        (block
          (pass_statement)))
      (function_definition
        (identifier)
        (parameters
          (self_parameter
            (argument_convention)))
        (block
          (pass_statement))))))

================================================================================
Trait definitions with supertraits
================================================================================

trait A(B, C):
  pass

trait D(E):
  def func(self):
    ...

trait F(G, H):
  def func1(mut self):
    pass

  def func2(self, var arg: Arg):
    pass

trait I(J, K, L):
  def func1(mut self, var existing: Self, /):
    pass

  def func2(var self):
    pass

--------------------------------------------------------------------------------

(module
  (trait_definition
    (identifier)
    (trait_list
      (identifier)
      (identifier))
    (block
      (pass_statement)))
  (trait_definition
    (identifier)
    (trait_list
      (identifier))
    (block
      (function_definition
        (identifier)
        (parameters
          (self_parameter))
        (block
          (ellipsis)))))
  (trait_definition
    (identifier)
    (trait_list
      (identifier)
      (identifier))
    (block
      (function_definition
        (identifier)
        (parameters
          (self_parameter
            (argument_convention)))
        (block
          (pass_statement)))
      (function_definition
        (identifier)
        (parameters
          (self_parameter)
          (typed_parameter
            (argument_convention)
            (identifier)
            (type
              (identifier))))
        (block
          (pass_statement)))))
  (trait_definition
    (identifier)
    (trait_list
      (identifier)
      (identifier)
      (identifier))
    (block
      (function_definition
        (identifier)
        (parameters
          (self_parameter
            (argument_convention))
          (typed_parameter
            (argument_convention)
            (identifier)
            (type
              (self_type)))
          (positional_separator))
        (block
          (pass_statement)))
      (function_definition
        (identifier)
        (parameters
          (self_parameter
            (argument_convention)))
        (block
          (pass_statement))))))

================================================================================
Raise statements
================================================================================

raise
raise RuntimeError('NO')
raise RunTimeError('NO') from e

--------------------------------------------------------------------------------

(module
  (raise_statement)
  (raise_statement
    (call
      (identifier)
      (argument_list
        (string
          (string_start)
          (string_content)
          (string_end)))))
  (raise_statement
    (call
      (identifier)
      (argument_list
        (string
          (string_start)
          (string_content)
          (string_end))))
    (identifier)))

================================================================================
Comments
================================================================================

a(1)
# hi
b(2) # bye
c(3)

--------------------------------------------------------------------------------

(module
  (call
    (identifier)
    (argument_list
      (integer)))
  (comment)
  (call
    (identifier)
    (argument_list
      (integer)))
  (comment)
  (call
    (identifier)
    (argument_list
      (integer))))

================================================================================
Comments at different indentation levels
================================================================================

if a:
  # one
# two
    # three
  b
    # four
  c

--------------------------------------------------------------------------------

(module
  (if_statement
    (identifier)
    (comment)
    (comment)
    (comment)
    (block
      (identifier)
      (comment)
      (identifier))))

================================================================================
Comments after dedents
================================================================================

if a:
  b

# one
c

--------------------------------------------------------------------------------

(module
  (if_statement
    (identifier)
    (block
      (identifier)))
  (comment)
  (identifier))

================================================================================
Comments at the ends of indented blocks
================================================================================

if a:
  b
  # one
  # two

if c:
  d
    # three
      # four

def a():
    if b:
        b # comment
    b # comment

# five

--------------------------------------------------------------------------------

(module
  (if_statement
    (identifier)
    (block
      (identifier)
      (comment)
      (comment)))
  (if_statement
    (identifier)
    (block
      (identifier)
      (comment)
      (comment)))
  (function_definition
    (identifier)
    (parameters)
    (block
      (if_statement
        (identifier)
        (block
          (identifier)
          (comment)))
      (identifier)
      (comment)))
  (comment))

================================================================================
Newline tokens followed by comments
================================================================================

a = 1
  # We need to recognize the newline *preceding* this comment, because there's no newline after it
--------------------------------------------------------------------------------

(module
  (assignment
    (identifier)
    (integer))
  (comment))

================================================================================
Extra newlines
================================================================================

if a:

